# foxfire

./: .gitmodules  Cargo.toml  build.rs  foxfire.desktop  readme.md  todo.md
.github/workflows/: ci.yml
resources/buttons/fullscreen/: mask
resources/buttons/generic/: small_button_mask
resources/buttons/next/: mask
resources/buttons/prev/: mask
src/: app_state.rs  button_data.rs  button_widget.rs  commands.rs  container.rs  container_widget.rs  data.rs  display_image_container.rs  events.rs  files.rs  image_container.rs  image_widget.rs  main.rs  osd_widget.rs  toolbar_data.rs  toolbar_widget.rs  types.rs  ui_builder.rs  view.rs  view_widget.rs
