[package]
name = "foxfire"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.dev]
opt-level = 3

[dependencies]
image = "0.24.2"
druid = { git = "https://github.com/longmathemagician/druid.git", features = ["im", "svg"] }
dark-light = "0.2.2"
wallpaper = "3.2.0"
opener = "0.5.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"