[package]
name = "foxfire"
description = "A simple photo viewer."
version = "0.1.2"
authors = ["Abelian Dynamics"]
edition = "2021"
build = "build.rs"

[profile.dev]
opt-level = 3

[profile.release]
strip = true
#opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
open_with = { path = "dependencies/open_with" }
properties = { path = "dependencies/properties" }
trash = "2.1.5"
image = "0.24.2"
druid = { git = "https://github.com/longmathemagician/druid.git", features = ["im", "svg"] }
dark-light = "0.2.2"
wallpaper = "3.2.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[patch."https://github.com/longmathemagician/piet.git"]
piet-common = { path = "dependencies/piet/piet-common" }

[patch."https://github.com/longmathemagician/druid.git"]
druid = { path = "dependencies/druid/druid" }

[package.metadata.bundle]
name = "Foxfire"
identifier = "com.abeliandynamics.foxfire"
icon = ["resources/icons/32x32.png", "resources/icons/128x128.png", "resources/icons/128x128@2x.png"]
category = "public.app-category.graphics-design"
linux_exec_args = "%f"
linux_mime_types = ["image/png", "image/jpeg", "image/bmp"]
short_description = "Photo viewer."
long_description = """
Foxfire is a minimalist photo viewer, written in Rust using the
Druid UI framework.
"""
